<resources>
    <string name="app_name">Platzi app clon</string>
    <string name="title_study">Study</string>
    <string name="title_explore">Explore</string>
    <string name="title_downloads">Downloads</string>
    <string name="title_profile">Profile</string>
    <string name="your_achievements_in_the_last_7_days">Your achievements in the last 7 days</string>
    <string name="continue_learning">Continue learning</string>
    <string name="dot">•</string>
    <string name="courses_completed">%1$s%2$s complete</string>
    <string name="courses_quantity">%1$s courses</string>
    <string name="my_paths">My paths</string>
    <string name="latest_podcasts">Latest podcasts</string>
    <string name="schools_of_your_interest">Schools of your interest</string>
    <string name="create_path">CREATE PATH</string>
    <string name="go_to_all_podcasts">go to all podcasts</string>
    <string name="go_to_all_routes">go to all routes</string>
    <string name="schools_logo">Schools logo</string>
    <string name="lesson_image">lesson image</string>
    <string name="lessons_image">lessons image</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="brayan_david">Brayan David</string>
    <string name="platzi_expert_plus">Platzi Expert Plus Pro Max 2048 GB</string>
    <string name="_170_083_puntos">170.083 Puntos</string>
    <string name="url"><![CDATA[https://media-exp1.licdn.com/dms/image/C4D03AQEzV4vlacX11A/profile-displayphoto-shrink_200_200/0/1642390273409?e=1648080000&v=beta&t=aUeXud6yiQb2iyboA8fEYTxGnHrZBUNXEIo1IcLrUh4]]></string>
    <string name="url_badge">https://static.platzi.com/media/career-banner/badge-machine-learning.png</string>
</resources>